# api/pkg/ent/ogent/oas_handlers_gen.go
@@ -20,6 +20,152 @@ import (
 	"github.com/ogen-go/ogen/otelogen"
 )
 
+// handleDeleteAppConfigRequest handles deleteAppConfig operation.
+//
+// Deletes the AppConfig with the requested Key.
+//
+// DELETE /app-configs/{key}
+func (s *Server) handleDeleteAppConfigRequest(args [1]string, argsEscaped bool, w http.ResponseWriter, r *http.Request) {
+	otelAttrs := []attribute.KeyValue{
+		otelogen.OperationID("deleteAppConfig"),
+		semconv.HTTPMethodKey.String("DELETE"),
+		semconv.HTTPRouteKey.String("/app-configs/{key}"),
+	}
+
+	// Start a span for this request.
+	ctx, span := s.cfg.Tracer.Start(r.Context(), "DeleteAppConfig",
+		trace.WithAttributes(otelAttrs...),
+		serverSpanKind,
+	)
+	defer span.End()
+
+	// Run stopwatch.
+	startTime := time.Now()
+	defer func() {
+		elapsedDuration := time.Since(startTime)
+		// Use floating point division here for higher precision (instead of Millisecond method).
+		s.duration.Record(ctx, float64(float64(elapsedDuration)/float64(time.Millisecond)), metric.WithAttributes(otelAttrs...))
+	}()
+
+	// Increment request counter.
+	s.requests.Add(ctx, 1, metric.WithAttributes(otelAttrs...))
+
+	var (
+		recordError = func(stage string, err error) {
+			span.RecordError(err)
+			span.SetStatus(codes.Error, stage)
+			s.errors.Add(ctx, 1, metric.WithAttributes(otelAttrs...))
+		}
+		err          error
+		opErrContext = ogenerrors.OperationContext{
+			Name: "DeleteAppConfig",
+			ID:   "deleteAppConfig",
+		}
+	)
+	params, err := decodeDeleteAppConfigParams(args, argsEscaped, r)
+	if err != nil {
+		err = &ogenerrors.DecodeParamsError{
+			OperationContext: opErrContext,
+			Err:              err,
+		}
+		recordError("DecodeParams", err)
+		s.cfg.ErrorHandler(ctx, w, r, err)
+		return
+	}
+
+	var response DeleteAppConfigRes
+	if m := s.cfg.Middleware; m != nil {
+		mreq := middleware.Request{
+			Context:          ctx,
+			OperationName:    "DeleteAppConfig",
+			OperationSummary: "",
+			OperationID:      "deleteAppConfig",
+			Body:             nil,
+			Params: middleware.Parameters{
+				{
+					Name: "app_name",
+					In:   "query",
+				}: params.AppName,
+				{
+					Name: "environment",
+					In:   "query",
+				}: params.Environment,
+				{
+					Name: "stack",
+					In:   "query",
+				}: params.Stack,
+				{
+					Name: "aws_profile",
+					In:   "query",
+				}: params.AWSProfile,
+				{
+					Name: "aws_region",
+					In:   "query",
+				}: params.AWSRegion,
+				{
+					Name: "k8s_namespace",
+					In:   "query",
+				}: params.K8sNamespace,
+				{
+					Name: "k8s_cluster_id",
+					In:   "query",
+				}: params.K8sClusterID,
+				{
+					Name: "X-Aws-Access-Key-Id",
+					In:   "header",
+				}: params.XAWSAccessKeyID,
+				{
+					Name: "X-Aws-Secret-Access-Key",
+					In:   "header",
+				}: params.XAWSSecretAccessKey,
+				{
+					Name: "X-Aws-Session-Token",
+					In:   "header",
+				}: params.XAWSSessionToken,
+				{
+					Name: "key",
+					In:   "path",
+				}: params.Key,
+			},
+			Raw: r,
+		}
+
+		type (
+			Request  = struct{}
+			Params   = DeleteAppConfigParams
+			Response = DeleteAppConfigRes
+		)
+		response, err = middleware.HookMiddleware[
+			Request,
+			Params,
+			Response,
+		](
+			m,
+			mreq,
+			unpackDeleteAppConfigParams,
+			func(ctx context.Context, request Request, params Params) (response Response, err error) {
+				response, err = s.h.DeleteAppConfig(ctx, params)
+				return response, err
+			},
+		)
+	} else {
+		response, err = s.h.DeleteAppConfig(ctx, params)
+	}
+	if err != nil {
+		recordError("Internal", err)
+		s.cfg.ErrorHandler(ctx, w, r, err)
+		return
+	}
+
+	if err := encodeDeleteAppConfigResponse(response, w, span); err != nil {
+		recordError("EncodeResponse", err)
+		if !errors.Is(err, ht.ErrInternalServerErrorResponse) {
+			s.cfg.ErrorHandler(ctx, w, r, err)
+		}
+		return
+	}
+}
+
 // handleHealthRequest handles Health operation.
 //
 // Simple endpoint to check if the server is up.
@@ -187,6 +333,34 @@ func (s *Server) handleListAppConfigRequest(args [0]string, argsEscaped bool, w 
 					Name: "stack",
 					In:   "query",
 				}: params.Stack,
+				{
+					Name: "aws_profile",
+					In:   "query",
+				}: params.AWSProfile,
+				{
+					Name: "aws_region",
+					In:   "query",
+				}: params.AWSRegion,
+				{
+					Name: "k8s_namespace",
+					In:   "query",
+				}: params.K8sNamespace,
+				{
+					Name: "k8s_cluster_id",
+					In:   "query",
+				}: params.K8sClusterID,
+				{
+					Name: "X-Aws-Access-Key-Id",
+					In:   "header",
+				}: params.XAWSAccessKeyID,
+				{
+					Name: "X-Aws-Secret-Access-Key",
+					In:   "header",
+				}: params.XAWSSecretAccessKey,
+				{
+					Name: "X-Aws-Session-Token",
+					In:   "header",
+				}: params.XAWSSessionToken,
 			},
 			Raw: r,
 		}
@@ -290,14 +464,6 @@ func (s *Server) handleReadAppConfigRequest(args [1]string, argsEscaped bool, w 
 			Body:             nil,
 			Params: middleware.Parameters{
 				{
-					Name: "page",
-					In:   "query",
-				}: params.Page,
-				{
-					Name: "itemsPerPage",
-					In:   "query",
-				}: params.ItemsPerPage,
-				{
 					Name: "app_name",
 					In:   "query",
 				}: params.AppName,
@@ -309,6 +475,34 @@ func (s *Server) handleReadAppConfigRequest(args [1]string, argsEscaped bool, w 
 					Name: "stack",
 					In:   "query",
 				}: params.Stack,
+				{
+					Name: "aws_profile",
+					In:   "query",
+				}: params.AWSProfile,
+				{
+					Name: "aws_region",
+					In:   "query",
+				}: params.AWSRegion,
+				{
+					Name: "k8s_namespace",
+					In:   "query",
+				}: params.K8sNamespace,
+				{
+					Name: "k8s_cluster_id",
+					In:   "query",
+				}: params.K8sClusterID,
+				{
+					Name: "X-Aws-Access-Key-Id",
+					In:   "header",
+				}: params.XAWSAccessKeyID,
+				{
+					Name: "X-Aws-Secret-Access-Key",
+					In:   "header",
+				}: params.XAWSSecretAccessKey,
+				{
+					Name: "X-Aws-Session-Token",
+					In:   "header",
+				}: params.XAWSSessionToken,
 				{
 					Name: "key",
 					In:   "path",
@@ -345,6 +539,164 @@ func (s *Server) handleReadAppConfigRequest(args [1]string, argsEscaped bool, w 
 	}
 
 	if err := encodeReadAppConfigResponse(response, w, span); err != nil {
+		recordError("EncodeResponse", err)
+		if !errors.Is(err, ht.ErrInternalServerErrorResponse) {
+			s.cfg.ErrorHandler(ctx, w, r, err)
+		}
+		return
+	}
+}
+
+// handleSetAppConfigRequest handles setAppConfig operation.
+//
+// Sets an AppConfig with the specified Key/Value.
+//
+// POST /app-configs
+func (s *Server) handleSetAppConfigRequest(args [0]string, argsEscaped bool, w http.ResponseWriter, r *http.Request) {
+	otelAttrs := []attribute.KeyValue{
+		otelogen.OperationID("setAppConfig"),
+		semconv.HTTPMethodKey.String("POST"),
+		semconv.HTTPRouteKey.String("/app-configs"),
+	}
+
+	// Start a span for this request.
+	ctx, span := s.cfg.Tracer.Start(r.Context(), "SetAppConfig",
+		trace.WithAttributes(otelAttrs...),
+		serverSpanKind,
+	)
+	defer span.End()
+
+	// Run stopwatch.
+	startTime := time.Now()
+	defer func() {
+		elapsedDuration := time.Since(startTime)
+		// Use floating point division here for higher precision (instead of Millisecond method).
+		s.duration.Record(ctx, float64(float64(elapsedDuration)/float64(time.Millisecond)), metric.WithAttributes(otelAttrs...))
+	}()
+
+	// Increment request counter.
+	s.requests.Add(ctx, 1, metric.WithAttributes(otelAttrs...))
+
+	var (
+		recordError = func(stage string, err error) {
+			span.RecordError(err)
+			span.SetStatus(codes.Error, stage)
+			s.errors.Add(ctx, 1, metric.WithAttributes(otelAttrs...))
+		}
+		err          error
+		opErrContext = ogenerrors.OperationContext{
+			Name: "SetAppConfig",
+			ID:   "setAppConfig",
+		}
+	)
+	params, err := decodeSetAppConfigParams(args, argsEscaped, r)
+	if err != nil {
+		err = &ogenerrors.DecodeParamsError{
+			OperationContext: opErrContext,
+			Err:              err,
+		}
+		recordError("DecodeParams", err)
+		s.cfg.ErrorHandler(ctx, w, r, err)
+		return
+	}
+
+	var response SetAppConfigRes
+	if m := s.cfg.Middleware; m != nil {
+		mreq := middleware.Request{
+			Context:          ctx,
+			OperationName:    "SetAppConfig",
+			OperationSummary: "",
+			OperationID:      "setAppConfig",
+			Body:             nil,
+			Params: middleware.Parameters{
+				{
+					Name: "page",
+					In:   "query",
+				}: params.Page,
+				{
+					Name: "itemsPerPage",
+					In:   "query",
+				}: params.ItemsPerPage,
+				{
+					Name: "app_name",
+					In:   "query",
+				}: params.AppName,
+				{
+					Name: "environment",
+					In:   "query",
+				}: params.Environment,
+				{
+					Name: "stack",
+					In:   "query",
+				}: params.Stack,
+				{
+					Name: "aws_profile",
+					In:   "query",
+				}: params.AWSProfile,
+				{
+					Name: "aws_region",
+					In:   "query",
+				}: params.AWSRegion,
+				{
+					Name: "k8s_namespace",
+					In:   "query",
+				}: params.K8sNamespace,
+				{
+					Name: "k8s_cluster_id",
+					In:   "query",
+				}: params.K8sClusterID,
+				{
+					Name: "X-Aws-Access-Key-Id",
+					In:   "header",
+				}: params.XAWSAccessKeyID,
+				{
+					Name: "X-Aws-Secret-Access-Key",
+					In:   "header",
+				}: params.XAWSSecretAccessKey,
+				{
+					Name: "X-Aws-Session-Token",
+					In:   "header",
+				}: params.XAWSSessionToken,
+				{
+					Name: "key",
+					In:   "query",
+				}: params.Key,
+				{
+					Name: "value",
+					In:   "query",
+				}: params.Value,
+			},
+			Raw: r,
+		}
+
+		type (
+			Request  = struct{}
+			Params   = SetAppConfigParams
+			Response = SetAppConfigRes
+		)
+		response, err = middleware.HookMiddleware[
+			Request,
+			Params,
+			Response,
+		](
+			m,
+			mreq,
+			unpackSetAppConfigParams,
+			func(ctx context.Context, request Request, params Params) (response Response, err error) {
+				response, err = s.h.SetAppConfig(ctx, params)
+				return response, err
+			},
+		)
+	} else {
+		response, err = s.h.SetAppConfig(ctx, params)
+	}
+	if err != nil {
+		recordError("Internal", err)
+		s.cfg.ErrorHandler(ctx, w, r, err)
+		return
+	}
+
+	if err := encodeSetAppConfigResponse(response, w, span); err != nil {
 		recordError("EncodeResponse", err)
 		if !errors.Is(err, ht.ErrInternalServerErrorResponse) {
 			s.cfg.ErrorHandler(ctx, w, r, err)
